# motor_control

./: CMakeLists.txt  package.xml
config/: back_wheel_2_0.yaml  pan_tilt.yaml  wheel_2_0.yaml
launch/: front_wheel_controller.launch  pan_tilt_controller.launch  robot1_controller.launch  robot2_controller.launch  rover_controller.launch  wheel_controller.launch
launch/include/: back_wheel_controller.launch
src/: dynamixel_reader.cpp  dynamixel_writer.cpp  joy_pub_test.py  ps4_wheel_writer.cpp  wheel_writer.cpp
